--- a/base_tier_validation/i18n/es.po
+++ b/base_tier_validation/i18n/es.po
@@ -4,17 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 13.0\n"
+"Project-Id-Version: Odoo Server 13.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2022-02-14 12:05+0000\n"
-"Last-Translator: Sergio Teruel <sergio.teruel@tecnativa.com>\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2023-08-02 02:10+0000\n"
+"PO-Revision-Date: 2023-08-01 21:13-0500\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.3.2\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #. module: base_tier_validation
 #. openerp-web
@@ -259,7 +260,7 @@ msgstr "Campo en el registro relacionado"
 
 #. module: base_tier_validation
 #: code:addons/base_tier_validation/models/tier_review.py:0
-#, fuzzy, python-format
+#, python-format
 msgid "Group %s"
 msgstr "Grupo %s"
 
@@ -283,7 +284,6 @@ msgstr "ID"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,help:base_tier_validation.field_tier_definition__notify_on_create
-#, fuzzy
 msgid ""
 "If set, all possible reviewers will be notified by email when this "
 "definition is triggered."
@@ -372,13 +372,13 @@ msgstr "Notificar a los revisores en la creación"
 #: code:addons/base_tier_validation/models/tier_validation.py:0
 #, python-format
 msgid "Operation has been <b>rejected</b>."
-msgstr ""
+msgstr "La operación ha sido <b>rechazada</b>."
 
 #. module: base_tier_validation
 #: code:addons/base_tier_validation/models/tier_validation.py:0
 #, python-format
 msgid "Operation has been <b>validated</b>!"
-msgstr ""
+msgstr "¡La operación ha sido <b>validada</b>!"
 
 #. module: base_tier_validation
 #. openerp-web
@@ -407,7 +407,7 @@ msgstr "Rechazado"
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_validation__rejected_message
 msgid "Rejected Message"
-msgstr ""
+msgstr "Mensaje de rechazo"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_review__res_id
@@ -438,13 +438,11 @@ msgstr "Solicitado Por"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_comment_wizard__res_id
-#, fuzzy
 msgid "Res"
 msgstr "Revisiones"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_comment_wizard__res_model
-#, fuzzy
 msgid "Res Model"
 msgstr "Modelo"
 
@@ -459,7 +457,7 @@ msgstr "Reiniciar validación"
 #: model:ir.model.fields,field_description:base_tier_validation.field_comment_wizard__review_ids
 #, python-format
 msgid "Review"
-msgstr "Revisor"
+msgstr "Revisión"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_definition__reviewer_id
@@ -532,13 +530,14 @@ msgstr "No hay usuarios en el campo seleccionado"
 #: code:addons/base_tier_validation/models/tier_validation.py:0
 #, python-format
 msgid "This %s needs to be validated"
-msgstr ""
+msgstr "Este %s necesita ser validado"
 
 #. module: base_tier_validation
 #: code:addons/base_tier_validation/models/tier_validation.py:0
 #, python-format
 msgid ""
-"This action needs to be validated for at least one record. Reviews pending:\n"
+"This action needs to be validated for at least one record. Reviews "
+"pending:\n"
 " - %s \n"
 "Please request a validation."
 msgstr ""
@@ -569,13 +568,11 @@ msgstr "Validaciones de Nivel (abstracto)"
 
 #. module: base_tier_validation
 #: model:mail.message.subtype,name:base_tier_validation.mt_tier_validation_accepted
-#, fuzzy
 msgid "Tier Validation Accepted Notification"
 msgstr "Validaciones de Nivel (abstracto)"
 
 #. module: base_tier_validation
 #: model:mail.message.subtype,name:base_tier_validation.mt_tier_validation_rejected
-#, fuzzy
 msgid "Tier Validation Rejected Notification"
 msgstr "Validaciones de Nivel (abstracto)"
 
@@ -592,7 +589,7 @@ msgstr "Validaciones de Nivel"
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_validation__to_validate_message
 msgid "To Validate Message"
-msgstr ""
+msgstr "Mensaje para validar"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_review__todo_by
@@ -614,7 +611,7 @@ msgstr "Usuarios"
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_definition__valid_reviewer_field_ids
 msgid "Valid Reviewer Field"
-msgstr ""
+msgstr "Campo de revisor válido"
 
 #. module: base_tier_validation
 #: model_terms:ir.ui.view,arch_db:base_tier_validation.tier_validation_label
@@ -623,7 +620,6 @@ msgstr "Validar"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_comment_wizard__validate_reject
-#, fuzzy
 msgid "Validate Reject"
 msgstr "Validado"
 
@@ -635,7 +631,7 @@ msgstr "Validado"
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_validation__validated_message
 msgid "Validated Message"
-msgstr ""
+msgstr "Mensaje validado"
 
 #. module: base_tier_validation
 #: model:ir.model.fields,field_description:base_tier_validation.field_tier_definition__review_type
@@ -660,27 +656,3 @@ msgstr "Validaciones"
 #: model_terms:ir.ui.view,arch_db:base_tier_validation.tier_definition_view_form
 msgid "e.g. Tier Validation for..."
 msgstr "ej. Validación de Nivel por..."
-
-#~ msgid "Any user in a specific group."
-#~ msgstr "Cualquier usuario en el grupo especificado."
-
-#~ msgid ""
-#~ "This action needs to be validated for at least one record. \n"
-#~ "Please request a validation."
-#~ msgstr ""
-#~ "Esta acción necesita ser validada para algún registro.\n"
-#~ "Por favor, solicita una validación."
-
-#~ msgid "Tier"
-#~ msgstr "Nivel"
-
-#, fuzzy
-#~| msgid "Sequence"
-#~ msgid "Approve Sequence"
-#~ msgstr "Secuencia"
-
-#~ msgid "Formula"
-#~ msgstr "Fórmula"
-
-#~ msgid "Python Expression"
-#~ msgstr "Expresión Python"
